# note-assistant-app

pc-app-build/: .env.example  .gitignore  DELIVERY_REPORT_PHASE_5_1_1_HOTFIX.md  DELIVERY_REPORT_PHASE_5_3_1_HOTFIX.md  HOTFIX_README.md  README.md  pyproject.toml  requirements.txt
pc-app-build/apps/notes-pyside/: main.py  requirements.txt
pc-app-build/docs/: api.md  architecture.md  demo_script.md  known_issues.md  packaging.md  pc_ui_pages.md  phase5_4_eventbus_bridge.md  py_xiaozhi_integration.md  setup_pc.md
pc-app-build/docs/demo/: DEMO_SCRIPT_PHASE_9_1.md  FALLBACK_DEMO_PATH_PHASE_9_1.md  KNOWN_ISSUES_PHASE_9_1.md  README_DEMO_PHASE_9_0.md  README_DEMO_PHASE_9_1.md
pc-app-build/scripts/: bootstrap_py_xiaozhi_runtime.bat  check_app_exit_stop_config.bat  check_demo_environment.bat  check_login_prewarm_task.bat  check_runtime_diagnostics.bat  check_sidecar.bat  cleanup_abandoned_phase9_1.bat  demo_preflight_real.bat  disable_app_exit_stop_runtime.bat  enable_app_exit_stop_runtime.bat  install_login_prewarm_task.bat  install_py_xiaozhi_headless_runtime_patch.bat  open_demo_docs.bat  replace_demo_notes.py  reset_demo_data.bat  reset_demo_data.py  restart_py_xiaozhi_runtime.bat  seed_demo_data.py  seed_demo_notes.bat  seed_demo_notes.py  sidecar_mock.py  start_all.bat  start_all_integrated.bat  start_demo_mock_mode.bat  start_notes_api.bat  start_pc_app.bat  start_sidecar.bat  start_sidecar_mock.bat  start_voice_prewarm.bat  start_voice_prewarm_hidden.vbs  uninstall_login_prewarm_task.bat  verify_py_xiaozhi_runtime_manager.bat
(+103 files in other folders)
