[project]
name = "note-assistant"
version = "0.1.0"
description = "A note-taking desktop application with voice assistant capabilities, powered by PySide6 + QML and py-xiaozhi"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Note Assistant Team" },
]

dependencies = [
    "PySide6>=6.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
target-version = "py310"
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
